--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ black = "^24.4.2"
 pytest = "^8.2.2"
 pytest-cov = "^5.0.0"
 taskipy = "^1.13.0"
+factory-boy = "^3.3.0"
 
 [tool.pytest.ini_options]
 pythonpath = "."
