--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ alembic = "^1.13.2"
 pwdlib = {extras = ["argon2"], version = "^0.2.0"}
 python-multipart = "^0.0.9"
 pyjwt = "^2.8.0"
+psycopg = {extras = ["binary"], version = "^3.2.1"}
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.5.1"
@@ -25,6 +26,7 @@ taskipy = "^1.13.0"
 factory-boy = "^3.3.0"
 freezegun = "^1.5.1"
 pytest-asyncio = "^0.23.8"
+testcontainers = "^4.7.2"
 
 [tool.pytest.ini_options]
 pythonpath = "."
