--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,11 +9,11 @@ services:
       - POSTGRES_PASSWORD=app_password
     ports:
       - "5432:5432"
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready"]
-      interval: 5s
-      timeout: 5s
-      retries: 10
+    # healthcheck:
+    #   test: ["CMD-SHELL", "pg_isready"]
+    #   interval: 5s
+    #   timeout: 5s
+    #   retries: 10
 
   fastzero_app:
     image: fastzero_app
